RESOLVED FIXED100840
[WK2][EFL] Assert check need to be changed in InputMethodContextEfl::InputMethodContextEfl
https://bugs.webkit.org/show_bug.cgi?id=100840
Summary [WK2][EFL] Assert check need to be changed in InputMethodContextEfl::InputMet...
KyungTae Kim
Reported 2012-10-31 04:23:04 PDT
There was assert fail in InputMethodContextEfl::InputMethodContextEfl on MiniBrowser Because 'context' is already set to 'm_context'. Assert check need to be done for m_context.
Attachments
Patch (1.62 KB, patch)
2012-10-31 04:25 PDT, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-10-31 04:25:18 PDT
Ryuan Choi
Comment 2 2012-10-31 04:30:24 PDT
(In reply to comment #1) > Created an attachment (id=171617) [details] > Patch Make sense to me.
Chris Dumez
Comment 3 2012-10-31 04:34:02 PDT
Comment on attachment 171617 [details] Patch LGTM. Thanks.
WebKit Review Bot
Comment 4 2012-10-31 05:19:59 PDT
Comment on attachment 171617 [details] Patch Clearing flags on attachment: 171617 Committed r133014: <http://trac.webkit.org/changeset/133014>
WebKit Review Bot
Comment 5 2012-10-31 05:20:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.