[WK2][EFL] Assert check need to be changed in InputMethodContextEfl::InputMethodContextEfl https://bugs.webkit.org/show_bug.cgi?id=100840

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-10-31
Reviewed by Kenneth Rohde Christiansen.

Because 'context' is already set to 'm_context', assert check need to be done for m_context.

* UIProcess/efl/InputMethodContextEfl.cpp:
(WebKit::InputMethodContextEfl::InputMethodContextEfl):

Canonical link: https://commits.webkit.org/118892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133014 268f45cc-cd09-0410-ab3c-d52691b4dbfc